# c-shell

./: .gitignore  CMakeLists.txt  README.md  output.txt
src/: main.c  shell.c  shell.h
src/builtin/: builtin.c  builtin.h  cd.c  echo.c  exit.c  history.c  pwd.c  type.c
src/ds/: hashset.c  hashset.h
src/exec/: exec.h  execute.c  path.c  path.h  redirection.c  redirection.h
src/input/: input.h  input_readline.c
src/parse/: lexer.c  lexer.h  parser.c  parser.h
src/util/: scanners.c  scanners.h
tests/: test  test.c
